# Network_Final_Project

./: CMakeLists.txt  PLAN CHI TIẾT PROJECT THI TRẮC NGHIỆM TRỰC TUYẾN.docx  Problems.txt
client/: CMakeLists.txt
client/include/client/: core.hpp  state.hpp  ui.hpp
client/src/: core.cpp  main.cpp  ui.cpp
cmake/: Deps.cmake
common/: CMakeLists.txt
common/include/common/: aes_crypto.hpp  codec.hpp  crypto.hpp  message.hpp
common/src/: aes_crypto.cpp  codec.cpp  crypto.cpp  placeholder.cpp
data/: migration_add_started_at.sql  quiz.db  quiz.db.backup  schema.sql
scripts/: CMakeLists.txt  echo_client.cpp  seed.cpp
server/: CMakeLists.txt
server/include/server/: auth.hpp  room.hpp  server.hpp  thread_pool.hpp
server/src/: auth.cpp  main.cpp  room.cpp  server.cpp  thread_pool.cpp
tests/: CMakeLists.txt  codec_tests.cpp
webapp/: package-lock.json  package.json  server.js
webapp/public/: index.html  main.js  style.css  toast.css
